--- a/index.html
+++ b/index.html
@@ -3,26 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>Special Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f5f5f5;
             color: #333;
         }
         header {
-            background: #333;
+            background: #FF46A2;
             color: #fff;
-            padding: 10px 20px;
             text-align: center;
+            padding: 20px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
         }
         main {
-            padding: 20px;
             max-width: 800px;
-            margin: 0 auto;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .spotify {
+            margin: 20px 0;
+            text-align: center;
+        }
+        .spotify iframe {
+            border: none;
+            width: 100%;
+            height: 380px;
+            border-radius: 10px;
+        }
+        .message {
+            margin: 20px 0;
+            font-size: 1.2em;
+            line-height: 1.8;
+            text-align: justify;
+        }
+        .gallery {
+            margin: 20px 0;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+        }
+        .gallery img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         footer {
             text-align: center;
@@ -34,14 +70,38 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Pages Site</h1>
+        <h1>Special Page</h1>
     </header>
     <main>
-        <p>Hello! This is a simple website hosted using GitHub Pages.</p>
-        <p>Edit this file to customize your content!</p>
+        <!-- Spotify Playlist Section -->
+        <div class="spotify">
+            <h2>My Favorite Spotify Playlist</h2>
+            <iframe 
+                src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M?utm_source=generator" 
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </div>
+
+        <!-- Long Message Section -->
+        <div class="message">
+            <h2>A Special Message</h2>
+            <p>
+                
+            </p>
+        </div>
+
+        <!-- Image Gallery Section -->
+        <div class="gallery">
+            <h2>Photo Gallery</h2>
+            <img src="https://via.placeholder.com/300" alt="Placeholder Image 1">
+            <img src="https://via.placeholder.com/300" alt="Placeholder Image 2">
+            <img src="https://via.placeholder.com/300" alt="Placeholder Image 3">
+            <img src="https://via.placeholder.com/300" alt="Placeholder Image 4">
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>Made with ❤️ for someone special.</p>
     </footer>
 </body>
 </html>
