--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
         <!-- Spotify Playlist Section -->
         <div class="spotify">
             <h2>My Favorite Spotify Playlist</h2>
-            <iframe 
-                src="https://open.spotify.com/embed/playlist/37i9dQZF1DXcBWIGoYBM5M?utm_source=generator" 
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                allowfullscreen>
-            </iframe>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3GYyAGywKrlMMG00bW4IWc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
 
         <!-- Long Message Section -->
