--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <!-- Map Section -->
         <div class="map">
-            <h2>Our Special Places</h2>
+            <h2>Our Places</h2>
             <iframe src="https://www.google.com/maps/d/embed?mid=1bJWleySGi1JO4sICzKZlDr7dNcuq8Fw&ehbc=2E312F"></iframe>
         </div>
     </main>
