--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f5f5f5;
+            background-color: #ffc0cb; 
             color: #333;
         }
         header {
@@ -29,6 +29,7 @@
             padding: 20px;
             background: #fff;
             border-radius: 10px;
+            border: 5px solid #000; 
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         .spotify {
@@ -73,17 +74,17 @@
 </head>
 <body>
     <header>
-        <h1>Special Page</h1>
+        <h1>HAPPY 5 MONTHS </h1>
     </header>
     <main>
-        <!-- Timer Section -->
+        
         <div class="timer">
-            <h2>How Long I've Been Having a Great Time</h2>
+            <h2>How long ive been having a great time</h2>
             <p id="timer-display">Loading...</p>
         </div>
 
         <div class="spotify">
-            <h2>The Playlist Name Says It</h2>
+            <h2>The playlist name says it</h2>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3GYyAGywKrlMMG00bW4IWc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
 
@@ -94,7 +95,7 @@
             </p>
         </div>
 
-        <!-- Map Section -->
+        
         <div class="map">
             <h2>Our Places</h2>
             <iframe src="https://www.google.com/maps/d/embed?mid=1bJWleySGi1JO4sICzKZlDr7dNcuq8Fw&ehbc=2E312F"></iframe>
